test/models/openpitrix_validate_package_response.go
// Code generated by go-swagger; DO NOT EDIT.

package models

// This file was generated by the swagger tool.
// Editing this file might prove futile when you re-run the swagger generate command

import (
	strfmt "github.com/go-openapi/strfmt"

	"github.com/go-openapi/errors"
	"github.com/go-openapi/swag"
)

// OpenpitrixValidatePackageResponse openpitrix validate package response
// swagger:model openpitrixValidatePackageResponse
type OpenpitrixValidatePackageResponse struct {

	// error
	Error string `json:"error,omitempty"`

	// error details
	ErrorDetails map[string]string `json:"error_details,omitempty"`

	// name
	Name string `json:"name,omitempty"`

	// version name
	VersionName string `json:"version_name,omitempty"`
}

// Validate validates this openpitrix validate package response
func (m *OpenpitrixValidatePackageResponse) Validate(formats strfmt.Registry) error {
	var res []error

	if len(res) > 0 {
		return errors.CompositeValidationError(res...)
	}
	return nil
}

// MarshalBinary interface implementation
func (m *OpenpitrixValidatePackageResponse) MarshalBinary() ([]byte, error) {
	if m == nil {
		return nil, nil
	}
	return swag.WriteJSON(m)
}

// UnmarshalBinary interface implementation
func (m *OpenpitrixValidatePackageResponse) UnmarshalBinary(b []byte) error {
	var res OpenpitrixValidatePackageResponse
	if err := swag.ReadJSON(b, &res); err != nil {
		return err
	}
	*m = res
	return nil
}
